# Guardian

./: .gitattributes  .gitignore  .trivyignore  .trivyignore.yaml  GUARDRAILS.md  README.md  SCOPE_SCHEMA.yaml  SECURITY_POLICY.md  docker-compose.yml  guardian.config.yaml  pyproject.toml  renovate.json  requirements.txt
.github/: CODEOWNERS  pull_request_template.md  zizmor.yml
adaptive/: __init__.py
agents/: __init__.py  base.py
attestation/: __init__.py  evidence_store.py  signing.py
cases/: invisable-ci-token-case.yaml
chaos/: invisable-gameday.yaml  invisable-twin-gameday.yaml
citadel/: __init__.py
codeql/: codeql-config.yml
connectors/: __init__.py  base.py  codeql.py  contract.py  credential_audit.py  gitleaks.py  repo_scanner.py  semgrep.py  trivy.py  zap.py
containment/: __init__.py  actions.py  adapter.py
core/: __init__.py  audit.py  brain.py  cli.py  config.py  evidence.py  grants.py  guardrails.py  inventory.py  machine_attestation.py  memory.py  opa.py  policy_gate.py  roots_of_trust.py  router.py  scope.py  signing.py  tenancy.py  trust_producers.py  verifier.py
crypto_proof/: invisable-protocols.yaml
dashboard/: Dockerfile  app.py  index.html
detection/: __init__.py  engine.py  rules.py
docs/: adversary_emulation.md  agents.md  ai_gateway.md  architecture.md  authorization.md  brain.md  brain_v2.md  chaos_recovery.md  citadel_acceptance_gate.md  citadel_plane.md  citadel_quorum_model.md  citadel_recovery_model.md  citadel_threat_model.md  citadel_wave20_reconciliation.md  citadel_wave_status.md  credential_audit_tools.md  crypto_architecture.md  crypto_proof_lab.md  crypto_security_policy.md  crypto_test_plan.md  crypto_threat_model.md  data_lineage.md  defence_catalogue.md  digital_twin.md  endpoint_fabric.md  event_fabric.md  forensic_timeline.md  fuzzing_farm.md  hardening_roadmap.md  identity_graph.md  malware_lab.md  observability.md  ownership.md  phase1_orchestration.md  phase2_identity_evidence.md  phase3_isolation.md  phase4_supplychain.md  phase6_containment.md  phase6_detection.md  phase6_resilience.md  (+9 more)
emulation/: invisable-attack-plan.yaml
endpoint/: invisable-packs.yaml
eval/: README.md  promptfooconfig.yaml
event_fabric/: invisable-stream.yaml
forensics/: __init__.py  alerting.py  sources.py  timeline.py
fuzzing/: invisable-fuzz-campaign.yaml
gitleaks/: .gitleaks.toml
identity/: __init__.py  credentials.py  oidc.py
identity_graph/: invisable-identity-sample.yaml
isolation/: __init__.py  egress.py  sandbox.py  security_context.py
lineage/: invisable-lineage-sample.yaml
malware_lab/: invisable-triage.yaml
monitoring/: prometheus.yml
observability/: __init__.py  alerts.py  trace.py
orchestration/: __init__.py  approvals.py  engine.py  state_machine.py  temporal_backend.py
ownership/: __init__.py  evidence.py  verifier.py
playwright/: package.json  playwright.config.ts  safeguarding.spec.ts
policies/: agent_boundary.yaml  malware_defence_library.yaml  mobile_guardian_modules.yaml  privacy_invariants.yaml  security_standards.md
recovery/: __init__.py  backup.py  drill.py
resilience/: __init__.py  failclosed.py  health.py
schemas/: approval-v1.json  artifact_ref-v1.json  asset_ref-v1.json  case_event-v1.json  code_change-v1.json  evidence_bundle-v1.json  evidence_item-v1.json  execution_job-v1.json  finding-v1.json  guardian_case_state-v1.json  guardian_decision-v1.json  hypothesis-v1.json  model_request-v1.json  model_response-v1.json  model_spec-v1.json  policy_decision_record-v1.json  proposed_action-v1.json  provenance-v1.json  remediation_option-v1.json  signed_manifest-v1.json  test_proposal-v1.json  tool_manifest-v1.json  verification_result-v1.json
scope/: assets.yaml  invisable-staging.yaml  test_accounts.yaml
scripts/: repository_governor.py  setup-merge-drivers.sh
security/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
semgrep/: semgrep.yml
shadow_guardian/: __init__.py  verifier.py
simulators/: __init__.py  __main__.py  banned_user_return.py  base.py  moderator_abuse.py  privacy_leak.py
supplychain/: __init__.py  admission.py  provenance.py  sbom.py
tenants/: invisable.yaml
tests/: conftest.py  test_adaptive_resilience.py  test_agent_boundary.py  test_ai_gateway.py  test_anti_oscillation.py  test_attestation.py  test_audit.py  test_authorization_properties.py  test_autonomy_budget.py  test_autonomy_states.py  test_brain.py  test_brain_tools_manifest.py  test_chaos.py  test_citadel_attestation_invariants.py  test_citadel_authority_invariants.py  test_citadel_build_reproducibility.py  test_citadel_capabilities_manifest.py  test_citadel_confidential.py  test_citadel_constitution.py  test_citadel_control_proof.py  test_citadel_crypto_agility.py  test_citadel_crypto_agility_runtime.py  test_citadel_data_protection.py  test_citadel_deception.py  test_citadel_formal.py  test_citadel_privacy_invariants.py  test_citadel_quorum.py  test_citadel_quorum_invariants.py  test_citadel_recovery_invariants.py  test_citadel_root_of_trust.py  test_citadel_tools_manifest.py  test_citadel_transparency.py  test_citadel_transparency_runtime.py  test_components_manifest.py  test_connector_contract.py  test_connector_contract_migration.py  test_containment.py  test_control_effectiveness.py  test_credential_audit.py  (+85 more)
(+353 files in other folders)
