[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invisable-guardian"
version = "0.1.0"
description = "INVISABLE Guardian — defensive-only AI security & safeguarding immune system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - INVISABLE internal use" }
authors = [{ name = "INVISABLE Security" }]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
guardian = "core.cli:main"

[tool.setuptools]
packages = ["core", "agents", "connectors", "simulators"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
