[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invisable-guardian"
version = "0.1.0"
description = "INVISABLE Guardian — defensive-only AI security & safeguarding immune system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - INVISABLE internal use" }
authors = [{ name = "INVISABLE Security" }]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    # Brain reasoning graph (inner) + durable case workflow (outer). LangGraph owns the
    # bounded reasoning cycle; Temporal owns the durable, crash-resistant orchestration.
    "langgraph>=1.0",
    "temporalio>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "hypothesis>=6.100",  # property-based proofs that guardrails can't be bypassed
]
# Optional Brain backends — Guardian degrades gracefully without these (in-memory
# store + in-Python policy fallback), so they are not required to run the MVP.
# (langgraph + temporalio are now core dependencies; see [project].dependencies.)
brain = [
    "qdrant-client>=1.9",
]
guardrails = [
    "nemoguardrails>=0.9",
]

# NOTE: the optional evaluation tooling (deepeval / ragas / datasets) is intentionally NOT part
# of the locked dependency set. ragas pulls diskcache, which currently carries an unfixed
# advisory (CVE-2025-69872); keeping it out of uv.lock removes it from the scanned supply-chain
# graph entirely, rather than suppressing the finding. The eval scripts under eval/ import it
# lazily and are run manually — install separately (see eval/README.md), ideally once diskcache
# ships a fixed release.

[project.scripts]
guardian = "core.cli:main"

[tool.setuptools]
packages = [
    "core",
    "core.ai",
    "core.brain",
    "core.evidence",
    "core.tools",
    "core.twin",
    "agents",
    "agents.specialists",
    "connectors",
    "simulators",
    "shadow_guardian",
    "forensics",
    "adaptive",
    "adaptive.autonomy",
    "adaptive.healing",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
